Добавила verify в findById_shouldFind, исправлила toDto в маппере